1、升级使用springboot3 2、弃用ehcache 3、引入h2